--- a/MANIFIESTO/MANIFIESTO.1
+++ b/MANIFIESTO/MANIFIESTO.1
@@ -3,15 +3,13 @@
 .TH "" "" "" "" ""
 .hy
 .SH Manifiesto del Laboratorio de Software Libre
-.SS Área Transdepartamental de Artes Multimediales de la Universidad
-Nacional del Arte
 .PP
 El uso de Software Libre permite autonomía tecnológica, estandarización
 e integración, seguridad, independencia, democratización de la
 información y ahorro de recursos.
 .PP
-Creemos que el uso de herramientas propietarias contribuye a lograr una
-fuerte dependencia en las mismas.
+Creemos que el uso de herramientas propietarias genera una fuerte
+dependencia.
 En contrapartida, mediante las herramientas libres, se le brinda al
 usuario la posibilidad de conocer la implementación de las mismas y los
 fundamentos tecnológicos en los que éstas se basan.
@@ -29,7 +27,7 @@ Creemos que éste es el presupuesto fundamental para enmarcar el avance y
 devenir tecnológico dentro de los modelos y circuitos libres, que son
 los únicos que nuestra comunidad académica debe promulgar en virtud del
 acervo cultural que constituyen y las facilidades que representan.
-.SH Objetivos
+.SS Objetivos
 .IP \[bu] 2
 Difundir y estrechar el vínculo entre las nuevas tecnologías (estudio,
 uso y creación) y nuestra comunidad educativa.
